tests/NormalTests/paczka1/fuzzy1/44453679.err
Error in line 1: vHp7f9O7q A716 46,2
Error in line 3: vHp7f9O7q A912 58,7
Error in line 2: 48T A912 56,4
Error in line 13: 48T S108 89,5
Error in line 12: PdStk A912 3,9
Error in line 14: 48T A912 66,4
Error in line 22: 58ib7 S611 12,8
Error in line 19: Ixu7Sm0xI A716 97,3
Error in line 25: Ixu7Sm0xI S108 12,1
Error in line 23: 58ib7 A912 1,4
Error in line 34: 58ib7 S611 29,9
